src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__copy_keybinding_hint__copy_keybinding_hint_disabled.snap
---
source: src/tui/snapshot_tests/copy_keybinding_hint.rs
expression: render_spans(false)
---
[
    Span::from("[Enter]").green(),
    Span::from(" Detail").dark_gray(),
    Span::from("  "),
    Span::from("[c]").dark_gray().dim(),
    Span::from(" Copy").dark_gray().dim(),
    Span::from("  "),
    Span::from("[d]").green(),
    Span::from(" Log").dark_gray(),
    Span::from("  "),
    Span::from("[f]").green(),
    Span::from(" Full").dark_gray(),
    Span::from("  "),
    Span::from("[w]").green(),
    Span::from(" Switcher").dark_gray(),
    Span::from("  "),
    Span::from("[Tab]").green(),
    Span::from(" Cycle Views").dark_gray(),
    Span::from("  "),
    Span::from("[Shift+P]").green(),
    Span::from(" Retry PR").dark_gray(),
]
