src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__copy_keybinding_hint__copy_keybinding_hint_enabled.snap
---
source: src/tui/snapshot_tests/copy_keybinding_hint.rs
assertion_line: 23
expression: render_spans(true)
---
[
    Span::from("[Enter]").green(),
    Span::from(" Detail").dark_gray(),
    Span::from("  "),
    Span::from("[c]").green(),
    Span::from(" Copy").dark_gray(),
    Span::from("  "),
    Span::from("[d]").green(),
    Span::from(" Log").dark_gray(),
    Span::from("  "),
    Span::from("[f]").green(),
    Span::from(" Full").dark_gray(),
    Span::from("  "),
    Span::from("[w]").green(),
    Span::from(" Switcher").dark_gray(),
    Span::from("  "),
    Span::from("[Tab]").green(),
    Span::from(" Cycle Views").dark_gray(),
    Span::from("  "),
    Span::from("[Shift+P]").green(),
    Span::from(" Retry PR").dark_gray(),
]
